caption alignment + thumb fix

--- a/src/ar.css
+++ b/src/ar.css
@@ -19,18 +19,24 @@ section.testimony {
     -webkit-text-stroke: 0;
 }
 
-
-
-.ar section > a.thumb{
+.ar section:not(.gofundme) > a.thumb{
     background-image: image-set(
         url(assets/report_thumb_ar.png) 1x,
         url(assets/report_thumb_ar@2x.png) 2x
     );
 }
 
-.ar section > a.thumb:hover{
+.ar section:not(.gofundme) > a.thumb:hover{
     background-image: image-set(
         url(assets/report_thumb_ar-hover.png) 1x,
         url(assets/report_thumb_ar-hover@2x.png) 2x
     );
+}
+
+@media (max-width: 1000px) and (orientation: portrait){
+    .ar section > a.thumb{
+        font-size: 0.85em;
+        line-height: 1.2em;
+        padding: 28px 140px 4px 8px;
+    }
 }
